--- a/client/src/components/styles/landscape.css
+++ b/client/src/components/styles/landscape.css
@@ -8,6 +8,8 @@
   align-items: center;
   margin: 3vh 0 0 0;
   background-color: rgba(150, 150, 200, 0.25);
+  background: linear-gradient(0deg,rgba(150, 150, 200, 0.25) 0%, rgba(150, 150, 200, 0.25) 90%, transparent 100%);
+  
 }
 
 #landscape-title {
