--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,7 +23,7 @@ html {
 
 body {
   height: 100%;
-  overflow: auto;
+  /* overflow: auto; */
 }
 
 #root{
